--- a/index.html
+++ b/index.html
@@ -582,13 +582,13 @@
             >
           </div>
           <div class="faq-answer descr">
-            Свадьба проходит по современным традициям. Мы отказывается от классического <br class="mobile-none" />
+            Свадьба проходит по современным традициям. Мы отказываемся от классического <br class="mobile-none" />
             формата в пользу «камерной свадьбы». Это альтернатива шумной и яркой вечеринке,<br class="mobile-none" />
-            <br class="descr-none" />на которой веселятся ночь напролет. 
+            на которой веселятся ночь напролет. 
             <br class="descr-none" /><br class="descr-none" />
-            Свадьба в камерном стиле — это званый ужин,<br class="mobile-none" />
-            на котором присутствуют только близкие <br class="descr-none" />и родные люди. Это торжество,  на котором<br class="mobile-none" />
-            присутствуют самые близкие люди, за счет чего создаётся уют и близость. <br class="mobile-none" />
+            Свадьба в камерном стиле — это званый ужин,
+            на котором присутствуют только близкие <br class="descr-none" />и родные люди. Это торжество,  на котором
+            присутствуют самые близкие люди, за счет <br class="mobile-none" /> чего создаётся уют и близость. <br class="mobile-none" />
             <br>
             <br class="descr-none" />
             Наша цель — уделить внимание каждому гостю.
