--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="menu my-container">
