--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="program-block-text">
             <div class="program-block-title descr-title">
               Сборы гостей <br class="desctop-none">
-              у ЗАГСА
+              у ЗАГСа
             </div>
             <div class="program-block-descr descr">
               Санкт-Петербург, Английская набережная, <br class="desctop-none">д.28
@@ -193,7 +193,7 @@
             <img class="blue-heart" src="./icons/heart.svg" alt="" />
           </div>
           <div class="program-block-text">
-            <div class="program-block-title descr-title">Роспись в ЗАГС</div>
+            <div class="program-block-title descr-title">Роспись в ЗАГСе</div>
           </div>
         </div>
         <div
