--- a/index.html
+++ b/index.html
@@ -511,9 +511,7 @@
           <div class="faq-answer descr">
             Наш свадебный организатор — Елизавета с радостью ответит на ваши
             вопросы <br class="mobile-none" />
-            в день мероприятия и за несколько дней до него. <br class="desctop-none" /><br class="desctop-none" />Просьба,
-            не беспокоить <br class="mobile-none" />
-            по пустякам. Её номер телефона: <a class="default-link" href="tel:+79811815051">+7 (981) 181-50-51</a>
+            в день мероприятия и за несколько дней до него. <br class="desctop-none" /><br class="desctop-none" /> Её номер телефона: <a class="default-link" href="tel:+79811815051">+7 (981) 181-50-51</a>
           </div>
         </div>
         <div class="faq-block">
