--- a/index.html
+++ b/index.html
@@ -550,11 +550,8 @@
             могут <br class="mobile-none" />показаться для маленьких детей утомительными. Мы
             переживаем о комфорте <br class="mobile-none" />каждого гостя и хотим, чтобы все
             отдохнули душой на нашем празднике. <br class="desctop-none" /><br class="desctop-none" />Однако, <br class="mobile-none" />если по каким-то
-            причинам не получается оставить детей младше семи лет дома, <br  class="mobile-none" />то
-            огромная просьба обговорить этот момент с нами заранее, за
-            несколько<br class="mobile-none" />
-            месяцев и поставить в известность, чтобы скорректировать программу
-            дня.
+            причинам не получится оставить детей младше семи лет дома, <br  class="mobile-none" />то
+            огромная просьба предупредить нас об этом заранее(до первого мая),<br class="mobile-none" /> чтобы мы имели возможность скорректировать программу дня.
           </div>
         </div>
         <div class="faq-block">
