--- a/index.html
+++ b/index.html
@@ -318,6 +318,13 @@
             data-aos-duration="800"
           ></div>
           <div
+            class="dress__circle bg-cream"
+            style="background: #7ededf;"
+            data-aos="fade-up"
+            data-aos-anchor-placement="bottom-bottom"
+            data-aos-duration="800"
+          ></div>
+          <div
             class="dress__circle bg-black"
             data-aos="fade-up"
             data-aos-anchor-placement="bottom-bottom"
